--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,22 @@ services:
       PORT: ${API_PORT}
     restart: on-failure
     working_dir: /opt/app
+    depends_on:
+      - database
     volumes:
       - ./api-service:/opt/app
     ports:
       - ${API_PORT}:${API_PORT}
+  database:
+    image: postgres:12
+    restart: always
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+volumes:
+  db_data:
