--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,23 +21,30 @@ services:
     command: bash -c "yarn install && yarn start"
     environment:
       PORT: ${API_PORT}
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PORT: ${POSTGRES_PORT}
     restart: on-failure
     working_dir: /opt/app
+    links:
+      - postgres
     depends_on:
-      - database
+      - postgres
     volumes:
       - ./api-service:/opt/app
     ports:
       - ${API_PORT}:${API_PORT}
-  database:
+  postgres:
     image: postgres:12
     restart: always
     volumes:
       - db_data:/var/lib/postgresql/data
     environment:
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
 volumes:
